[package]
name = "buttercup"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "1.8.0"
aws-config = "0.54.1"
aws-sdk-polly = "0.24.0"
axum = { version = "0.5.1", features = ["ws"] }
axum-server = { version = "0.4.0", features = ["tls-rustls"] }
base64 = "0.21.0"
chrono = "0.4.17"
futures = "0.3.21"
http = "0.2.6"
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["json", "multipart"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
structopt = "0.3.26"
tokio = { version = "1.17.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.15.0", features = ["native-tls"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tungstenite = "0.14.0"